k3s-cluster-apps/apps/networking/external_unifi/external-name.yaml
apiVersion: v1
kind: Service
metadata:
  name: unifi
spec:
  type: ExternalName
  externalName: rpi4-docker.home.lan.
